--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1 class="mt-2 mb-4">Patient Records System</h1>
-
+      <!--CSEF跨站请求伪造-->
       <form action="" method="POST">
         <div class="row">
           <div class="col-4">
@@ -35,6 +35,7 @@
            </div>
           </div>
         </div>
+        <!--密码明文传输-->
         <button type="submit" class="mt-2 btn btn-primary">Search</button>
       </form>
     </div>
